Better date sorting

--- a/templates/person.html
+++ b/templates/person.html
@@ -52,7 +52,7 @@
                         <td><a href="{{url_for('main.person_display', name=per.urlname)}}">{{per.name}}</a></td>
                         {% if per.nights %}
                             <td>{{per.nights|length}}</td>
-                            <td><a href="{{url_for('main.night_display', datestr=per.nights[0].datestr)}}">{{per.nights[0].listdate}}</a></td>
+                            <td><a href="{{url_for('main.night_display', datestr=per.nights[0].datestr)}}">{{per.nights[0].listdate_js}}</a></td>
                         {% else %}
                             <td>&nbsp;</td>
                             <td>&nbsp;</td>
@@ -76,6 +76,17 @@ $('#personnights').dataTable({
     "aoColumns": [
         { "sType": "date" },
         null,
+        null
+    ],
+    responsive: true
+});
+
+$('#allpeople').dataTable({
+    "bPaginate": false,
+    "aaSorting": [[ 1, "desc" ]],
+    "aoColumns": [
+        { "sType": "string" },
+        { "sType": "numeric" },
         null
     ],
     responsive: true
