need to keep working on dt crap

--- a/templates/person.html
+++ b/templates/person.html
@@ -81,7 +81,7 @@ $('#allpeople').dataTable({
     "aaSorting": [[ 1, "desc" ]],
     "columnDefs": [
         { "targets": 0, "type": "string" },
-        { "targets": 1, "type": "numeric" },
+        { "targets": 1, "type": "num" },
     ],
     responsive: true
 });
