footer update to test latest deploy code

--- a/templates/base.html
+++ b/templates/base.html
@@ -229,7 +229,7 @@
             </div>
             <div class="text-success" style="font-size: 65%;">
                 Copyright (c) {{g.year}} - but we'll share if you ask nicely.
-                <p>Be sure to ask Marty about going vegan.</p>
+                <p>Be sure to ask Marty about going vegan &#9774;</p>
             </div>
         </div>
     </div>
