--- a/templates/base.html
+++ b/templates/base.html
@@ -221,6 +221,8 @@
             <div class="text-warning" style="font-size: 70%;">
                 Gourmands and Movies -- brought to you by the Hub of Western Civilization
                 &nbsp;&nbsp;&nbsp;
+                <a href="{{url_for('data.atom_nights')}}">ATOM Feed</a>
+                &sect;
                 <a href="{{url_for('lawyer.tos')}}">Terms of Service</a>
                 &sect;
                 <a href="{{url_for('lawyer.about')}}">About</a>
