Creating calendar stream

--- a/templates/base.html
+++ b/templates/base.html
@@ -223,6 +223,8 @@
                 &nbsp;&nbsp;&nbsp;
                 <a href="{{url_for('data.atom_nights')}}">ATOM Feed</a>
                 &sect;
+                <a href="{{url_for('data.calendar')}}">Historical Calendar</a>
+                &sect;
                 <a href="{{url_for('lawyer.tos')}}">Terms of Service</a>
                 &sect;
                 <a href="{{url_for('lawyer.about')}}">About</a>
