force reload for javascript

--- a/templates/base.html
+++ b/templates/base.html
@@ -266,7 +266,7 @@
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.13/js/dataTables.bootstrap.min.js"></script>
 
-<script type="text/javascript" src="/static/nutbush.js"></script>
+<script type="text/javascript" src="/static/nutbush.js?{{g.timestamp}}"></script>
 
 <script type="text/javascript">
     // Available to everyone that needs to show an error
