Use new movie poster/cache service

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -19,7 +19,7 @@
             <div class="col-md-8" id="movie-details-container">
             </div>
             <div class="col-md-4">
-                <img id="det-movieimg" alt="{{movie.name}}" class="img-responsive img-thumbnail" src="{{url_for('main.movie_image', imdbkey=movie.imdbid)}}"/>
+                <img id="det-movieimg" alt="{{movie.name}}" class="img-responsive img-thumbnail" src="https://nutbushposters.fly.dev/{{movie.imdbid}}"/>
             </div>
         </div>
         <div class="row">
