--- a/templates/base.html
+++ b/templates/base.html
@@ -233,6 +233,8 @@
                 <a href="{{url_for('lawyer.faq')}}">FAQ</a>
                 &sect;
                 <a href="{{url_for('lawyer.cwm')}}">CWM</a>
+                &sect;
+                <a href="{{url_for('lawyer.a50')}}">Adam&apos;s 50th</a>
             </div>
             <div class="text-success" style="font-size: 65%;">
                 Copyright (c) {{g.year}} - but we'll share if you ask nicely.
